<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <data>

        <variable
            name="clickHandler"
            type="android.view.View.OnClickListener" />
    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/color_background">

        <ImageView
            android:id="@+id/logoImageView"
            android:layout_width="48dp"
            android:layout_height="48dp"
            android:layout_marginStart="45dp"
            android:layout_marginTop="120dp"
            android:src="@drawable/logo"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/welcomeTextView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="32dp"
            android:fontFamily="@font/strawford_black"
            android:text="@string/welcome"
            android:textSize="24sp"
            android:textStyle="bold"
            app:layout_constraintStart_toStartOf="@id/logoImageView"
            app:layout_constraintTop_toBottomOf="@id/logoImageView" />

        <LinearLayout
            android:id="@+id/quoteLinearLayout"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="45dp"
            android:layout_marginTop="60dp"
            android:orientation="horizontal"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/welcomeTextView">

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/ic_quote" />

            <TextView
                android:id="@+id/quoteTextView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="3dp"
                android:layout_marginTop="12dp"
                android:fontFamily="@font/scilla_regular_italic"
                android:gravity="left"
                android:text="@string/quote"
                android:textSize="18sp" />

        </LinearLayout>

        <Button
            android:id="@+id/signUpButton"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="45dp"
            android:layout_marginBottom="16dp"
            android:background="@drawable/rounded_button"
            android:fontFamily="@font/strawford_medium"
            android:paddingVertical="20dp"
            android:text="@string/sign_up"
            android:onClick="@{(v) -> clickHandler.onClick(v)}"
            android:textColor="@android:color/white"
            app:backgroundTint="@null"
            app:layout_constraintBottom_toTopOf="@id/signInButton"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent" />

        <Button
            android:id="@+id/signInButton"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="45dp"
            android:layout_marginBottom="44dp"
            android:background="@drawable/rounded_outlined_button"
            android:fontFamily="@font/strawford_medium"
            android:paddingVertical="20dp"
            android:text="@string/sign_in"
            android:textColor="@android:color/black"
            app:backgroundTint="@null"
            app:layout_constraintBottom_toTopOf="@id/termsTextView"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent" />

        <TextView
            android:id="@+id/termsTextView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="32dp"
            android:fontFamily="@font/strawford_medium"
            android:text="@string/terms"
            android:textColor="#4E4C4C"
            android:textSize="16sp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>
