<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <data>

    </data>

    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:cardCornerRadius="30dp"
        app:cardUseCompatPadding="true">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <ImageView
                android:id="@+id/carImage"
                android:layout_width="150dp"
                android:layout_height="0dp"
                android:scaleType="centerCrop"
                android:src="@drawable/image_car"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <ImageView
                android:id="@+id/youtubeImage"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="20dp"
                android:layout_marginTop="20dp"
                android:src="@drawable/ic_youtube"
                app:layout_constraintStart_toEndOf="@id/carImage"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/technologyTextView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="25dp"
                android:layout_marginTop="30dp"
                android:drawableStart="@drawable/ic_bullet"
                android:drawablePadding="5dp"
                android:fontFamily="@font/strawford_medium"
                android:text="@string/technology"
                android:textSize="14sp"
                app:layout_constraintStart_toEndOf="@id/carImage"
                app:layout_constraintTop_toBottomOf="@id/youtubeImage" />

            <TextView
                android:id="@+id/descriptionTextView"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:layout_marginEnd="25dp"
                android:fontFamily="@font/strawford_medium"
                android:text="@string/step_into_tomorrow"
                android:textSize="16sp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="@id/technologyTextView"
                app:layout_constraintTop_toBottomOf="@id/technologyTextView" />

            <TextView
                android:id="@+id/dateTextView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginVertical="30dp"
                android:layout_marginStart="25dp"
                android:fontFamily="@font/strawford_medium"
                android:text="@string/date"
                android:textColor="@color/color_light_gray"
                android:textSize="12sp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintStart_toEndOf="@id/carImage"
                app:layout_constraintTop_toBottomOf="@id/descriptionTextView" />
        </androidx.constraintlayout.widget.ConstraintLayout>

    </androidx.cardview.widget.CardView>
</layout>